[package]
name = "psqldc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "*"
argparse = "*"
rpassword = "7.3.1"
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
fuzzy-matcher = "0.3.7"
levenshtein = "1.0.5"
rust-fuzzy-search = "0.1.1"
time = "0.3.37"
multimap = "0.10.0"

